--- a/en/pages/lessons.html
+++ b/en/pages/lessons.html
@@ -85,9 +85,9 @@
 
   <footer>
     <div class="media">
-      <img src="../img/icons/instagram.svg" alt="instagram" class="medium">
-      <img src="../img/icons/facebook.svg" alt="facebook" class="medium">
-      <img src="../img/icons/youtube.svg" alt="youtube" class="medium">
+      <img src="../../img/icons/instagram.svg" alt="instagram" class="medium">
+      <img src="../../img/icons/facebook.svg" alt="facebook" class="medium">
+      <img src="../../img/icons/youtube.svg" alt="youtube" class="medium">
     </div>
     <a class="email" href="mailto:olenailn@ukr.net">olenailn@ukr.net</a>
   </footer>
