твори instead of роботи

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1 class="logo">Олена Ільницька</h1>
       <div class="menu">
         <a href="" class="menu-item menu-item--disabled">Про себе</a>
-        <a href="pages/works.html" class="menu-item">Роботи</a>
+        <a href="pages/works.html" class="menu-item">Твори</a>
         <a href="pages/children.html" class="menu-item">Для дітей</a><a href="pages/lessons.html"
           class="menu-item">Уроки</a>
         <a href="en/index.html" class="menu-item menu-item--lang">| ENG |</a>
@@ -30,7 +30,7 @@
     </div>
     <div class="hidden-menu">
       <a href="" class="menu-item menu-item--disabled">Про себе</a>
-      <a href="pages/works.html" class="menu-item">Роботи</a>
+      <a href="pages/works.html" class="menu-item">Твори</a>
       <a href="pages/children.html" class="menu-item">Для дітей</a>
       <a href="pages/lessons.html"
         class="menu-item">Уроки</a>
@@ -59,7 +59,7 @@
     <nav>
       <a href="pages/works.html" class="nav-item">
         <img src="img/icons/music.svg" alt="music">
-        <p>Роботи</p>
+        <p>Твори</p>
       </a>
       <a href="pages/lessons.html" class="nav-item">
         <img src="img/icons/basilica.svg" alt="lessons">
