--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -20,7 +20,7 @@
       <h1 class="logo">Олена Ільницька</h1>
       <div class="menu">
         <a href="../index.html" class="menu-item">Про себе</a>
-        <a href="works.html" class="menu-item">Роботи</a>
+        <a href="works.html" class="menu-item">Твори</a>
         <a href="children.html" class="menu-item">Для дітей</a><a href="" class="menu-item  menu-item--disabled">Уроки</a>
         <a href="../en/index.html" class="menu-item menu-item--lang">| ENG |</a>
       </div>
@@ -28,7 +28,7 @@
     </div>
     <div class="hidden-menu">
       <a href="../index.html" class="menu-item">Про себе</a>
-        <a href="works.html" class="menu-item">Роботи</a>
+        <a href="works.html" class="menu-item">Твори</a>
         <a href="children.html" class="menu-item">Для дітей</a><a href="" class="menu-item  menu-item--disabled">Уроки</a>
         <a href="../en/index.html" class="menu-item menu-item--lang">| ENG |</a>
     </div>
