--- a/pages/works.html
+++ b/pages/works.html
@@ -7,7 +7,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Роботи | Олена Ільницька</title>
+  <title>Твори | Олена Ільницька</title>
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/common.css">
   <link rel="stylesheet" href="../css/works.css">
@@ -21,7 +21,7 @@
       <h1 class="logo">Олена Ільницька</h1>
       <div class="menu">
         <a href="../index.html" class="menu-item">Про себе</a>
-        <a href="" class="menu-item menu-item--disabled">Роботи</a>
+        <a href="" class="menu-item menu-item--disabled">Твори</a>
         <a href="children.html" class="menu-item">Для дітей</a><a href="lessons.html" class="menu-item">Уроки</a>
         <a href="../en/index.html" class="menu-item menu-item--lang">| ENG |</a>
       </div>
@@ -29,14 +29,14 @@
     </div>
     <div class="hidden-menu">
       <a href="../index.html" class="menu-item">Про себе</a>
-        <a href="" class="menu-item menu-item--disabled">Роботи</a>
+        <a href="" class="menu-item menu-item--disabled">Твори</a>
         <a href="children.html" class="menu-item">Для дітей</a><a href="lessons.html" class="menu-item">Уроки</a>
         <a href="../en/index.html" class="menu-item menu-item--lang">| ENG |</a>
     </div>
   </header>
   <main>
     <div class="title">
-      <h1>Роботи</h1>
+      <h1>Твори</h1>
     </div>
     <section class="works works--best">
       <div class="work">
