--- a/pages/children.html
+++ b/pages/children.html
@@ -20,7 +20,7 @@
       <h1 class="logo">Олена Ільницька</h1>
       <div class="menu">
         <a href="../index.html" class="menu-item">Про себе</a>
-        <a href="works.html" class="menu-item">Роботи</a>
+        <a href="works.html" class="menu-item">Твори</a>
         <a href="" class="menu-item menu-item--disabled">Для дітей</a><a href="lessons.html" class="menu-item">Уроки</a>
         <a href="../en/index.html" class="menu-item menu-item--lang">| ENG |</a>
       </div>
@@ -28,7 +28,7 @@
     </div>
     <div class="hidden-menu">
       <a href="../index.html" class="menu-item">Про себе</a>
-      <a href="works.html" class="menu-item">Роботи</a>
+      <a href="works.html" class="menu-item">Твори</a>
       <a href="" class="menu-item menu-item--disabled">Для дітей</a><a href="lessons.html" class="menu-item">Уроки</a>
       <a href="../en/index.html" class="menu-item menu-item--lang">| ENG |</a>
     </div>
@@ -36,7 +36,7 @@
 
   <main>
     <div class="title">
-      <h1>Роботи для дітей</h1>
+      <h1>Твори для дітей</h1>
     </div>
     <section class="works works--children">
       <!-- <h2 class="works-title">Pieces for children</h2> -->
